nginx_app/nginx.deploy.play.yaml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: nginx-deployment2
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: web-server2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata: 
      name: nginx-deployment
      labels:
        app: web-server2
    spec:
      containers:
        - name: nginx-container
          image: nginx
          resources:
            limits:
              memory: "30Mi"
              cpu: "200m"
            requests:  
              memory: "20Mi"
              cpu: "100m"
