nginx_app/nginx.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: web-server
  type: LoadBalancer
  ports:

  - port: 30001
    targetPort: 80
